--- a/V3.ipynb
+++ b/V3.ipynb
@@ -649,7 +649,12 @@
         "\n",
         "# Initialize model and optimizer\n",
         "model = ActorCritic(state_dim=state_dim, action_dim=action_dim).to(device)\n",
-        "optimizer = torch.optim.Adam(model.parameters(), lr=1e-4)\n",
+        "actor_params = list(model.shared.parameters()) + list(model.actor_mean.parameters()) + list(model.actor_log_std.parameters())\n",
+        "critic_params = list(model.critic.parameters())\n",
+        "\n",
+        "actor_optimizer = torch.optim.Adam(actor_params, lr=3e-4)\n",
+        "critic_optimizer = torch.optim.Adam(critic_params, lr=1e-4)\n",
+        "\n",
         "\n",
         "# Tracking variables\n",
         "total_env_episodes = 0\n",
@@ -847,7 +852,7 @@
         "\n",
         "        for test_ep in range(3):  # Reduced to 3 test episodes for speed\n",
         "            obs, _ = env.reset()\n",
-        "            state_manager = ENV(obs, 0.0)\n",
+        "            state_manager = ENV(obs,control_parameters=control_parameters,desired_parameters=desired_parameters)\n",
         "            episode_reward = 0\n",
         "            done = False\n",
         "            test_steps = 0\n",
@@ -900,18 +905,19 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 617
         },
         "id": "gMY396Rx5F1J",
-        "outputId": "12b49eca-4e78-423c-c385-f0ef03496646"
+        "outputId": "34f6f0e1-e420-43f4-9784-28b06f8466f0"
       },
-      "execution_count": null,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "  0%|          | 1/1000 [00:41<11:34:27, 41.71s/it]"
+            "  0%|          | 1/1000 [00:43<12:00:16, 43.26s/it]"
           ]
         },
         {
@@ -925,7 +931,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "\r  0%|          | 2/1000 [01:22<11:29:36, 41.46s/it]"
+            "\r  0%|          | 2/1000 [01:26<11:58:25, 43.19s/it]"
           ]
         },
         {
@@ -939,7 +945,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "\r  0%|          | 3/1000 [02:06<11:43:11, 42.32s/it]"
+            "\r  0%|          | 3/1000 [02:10<12:03:19, 43.53s/it]"
           ]
         },
         {
@@ -953,7 +959,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "\r  0%|          | 4/1000 [02:48<11:41:53, 42.28s/it]"
+            "\r  0%|          | 4/1000 [02:52<11:54:48, 43.06s/it]"
           ]
         },
         {
@@ -961,6 +967,154 @@
           "name": "stdout",
           "text": [
             "Training Batch 3: Collected 1000 timesteps, 2 episodes\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r  0%|          | 5/1000 [03:34<11:44:40, 42.49s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training Batch 4: Collected 1000 timesteps, 2 episodes\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r  1%|          | 6/1000 [04:17<11:48:26, 42.76s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training Batch 5: Collected 1000 timesteps, 2 episodes\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r  1%|          | 7/1000 [04:59<11:44:37, 42.58s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training Batch 6: Collected 1000 timesteps, 2 episodes\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r  1%|          | 8/1000 [05:41<11:39:40, 42.32s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training Batch 7: Collected 1000 timesteps, 2 episodes\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r  1%|          | 9/1000 [06:23<11:35:15, 42.09s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training Batch 8: Collected 1000 timesteps, 2 episodes\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r  1%|          | 10/1000 [07:05<11:38:41, 42.34s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training Batch 9: Collected 1000 timesteps, 2 episodes\n",
+            "Training Batch 10: Collected 1000 timesteps, 2 episodes\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r  1%|          | 11/1000 [08:36<15:40:25, 57.05s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Episode 10: Avg Test Reward = 143.01, Max Test Reward = 171.83\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r  1%|          | 12/1000 [09:18<14:22:53, 52.40s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training Batch 11: Collected 1000 timesteps, 2 episodes\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r  1%|▏         | 13/1000 [09:59<13:29:04, 49.18s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training Batch 12: Collected 1000 timesteps, 2 episodes\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r  1%|▏         | 13/1000 [10:42<13:32:37, 49.40s/it]\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-63-3255731527.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    204\u001b[0m             \u001b[0;31m# Optimize\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    205\u001b[0m             \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzero_grad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 206\u001b[0;31m             \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    207\u001b[0m             \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclip_grad_norm_\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    208\u001b[0m             \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/torch/_tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[1;32m    624\u001b[0m                 \u001b[0minputs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    625\u001b[0m             )\n\u001b[0;32m--> 626\u001b[0;31m         torch.autograd.backward(\n\u001b[0m\u001b[1;32m    627\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    628\u001b[0m         )\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/torch/autograd/__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[1;32m    345\u001b[0m     \u001b[0;31m# some Python versions print out the first line of a multi-line function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    346\u001b[0m     \u001b[0;31m# calls in the traceback and some print out the last line\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 347\u001b[0;31m     _engine_run_backward(\n\u001b[0m\u001b[1;32m    348\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    349\u001b[0m         \u001b[0mgrad_tensors_\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/torch/autograd/graph.py\u001b[0m in \u001b[0;36m_engine_run_backward\u001b[0;34m(t_outputs, *args, **kwargs)\u001b[0m\n\u001b[1;32m    821\u001b[0m         \u001b[0munregister_hooks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_register_logging_hooks_on_whole_graph\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt_outputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    822\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 823\u001b[0;31m         return Variable._execution_engine.run_backward(  # Calls into the C++ engine to run the backward pass\n\u001b[0m\u001b[1;32m    824\u001b[0m             \u001b[0mt_outputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    825\u001b[0m         )  # Calls into the C++ engine to run the backward pass\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
           ]
         }
       ]
