--- a/V3.ipynb
+++ b/V3.ipynb
@@ -632,6 +632,7 @@
         "# Define hyperparameters\n",
         "T = 1000  # Max timesteps per rollout\n",
         "K = 10    # Number of policy update epochs\n",
+        "\n",
         "batch_size = 64\n",
         "gamma = 0.99\n",
         "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
@@ -641,7 +642,6 @@
         "epsilon = 0.2\n",
         "gae_lambda = 0.99\n",
         "max_episodes_per_rollout = 10\n",
-        "\n",
         "\n",
         "# Define action dimension (continuous action space)\n",
         "action_dim = 1  # For lateral acceleration\n",
@@ -654,7 +654,6 @@
         "\n",
         "actor_optimizer = torch.optim.Adam(actor_params, lr=3e-4)\n",
         "critic_optimizer = torch.optim.Adam(critic_params, lr=1e-4)\n",
-        "\n",
         "\n",
         "# Tracking variables\n",
         "total_env_episodes = 0\n",
@@ -821,27 +820,25 @@
         "            ratio = torch.exp(log_probs - old_log_probs)\n",
         "            returns = b_adv + old_state_values\n",
         "\n",
-        "            # Calculate policy loss with clipping\n",
+        "            # Policy loss\n",
         "            policy_loss_1 = b_adv * ratio\n",
-        "            clip_range = epsilon\n",
-        "            policy_loss_2 = b_adv * torch.clamp(ratio, 1-clip_range, 1+clip_range)\n",
+        "            policy_loss_2 = b_adv * torch.clamp(ratio, 1-epsilon, 1+epsilon)\n",
         "            policy_loss = -torch.min(policy_loss_1, policy_loss_2).mean()\n",
         "\n",
-        "            # Calculate value loss\n",
-        "            value_loss = F.mse_loss(returns, value.squeeze())\n",
-        "\n",
-        "            # Calculate entropy loss\n",
-        "            m = torch.distributions.Categorical(torch.softmax(log_probs, dim=1))\n",
-        "            entropy_loss = -(m.entropy()).mean()\n",
-        "\n",
-        "            # Combined loss\n",
-        "            loss = policy_loss + vf_coeff_cl * value_loss + ent_coef_c2 * entropy_loss\n",
+        "            actor_loss = policy_loss - ent_coef_c2 * m.entropy().mean()\n",
+        "            critic_loss = F.mse_loss(returns, value.squeeze())\n",
         "\n",
         "            # Optimize\n",
-        "            optimizer.zero_grad()\n",
-        "            loss.backward()\n",
-        "            torch.nn.utils.clip_grad_norm_(model.parameters(), 0.5)\n",
-        "            optimizer.step()\n",
+        "            # For the actor:\n",
+        "            actor_optimizer.zero_grad() # Clear gradients for actor\n",
+        "            actor_loss.backward()       # Compute gradients for actor_loss w.r.t. actor_params\n",
+        "            actor_optimizer.step()      # Update actor_params\n",
+        "\n",
+        "            # For the critic:\n",
+        "            critic_optimizer.zero_grad() # Clear gradients for critic\n",
+        "            critic_loss.backward()       # Compute gradients for critic_loss w.r.t. critic_params\n",
+        "            critic_optimizer.step()\n",
+        "\n",
         "\n",
         "    # Print rollout info\n",
         "    print(f\"Training Batch {episode}: Collected {actual_T} timesteps, {episodes_completed_in_rollout} episodes\")\n",
@@ -905,216 +902,18 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 617
+          "base_uri": "https://localhost:8080/"
         },
         "id": "gMY396Rx5F1J",
-        "outputId": "34f6f0e1-e420-43f4-9784-28b06f8466f0"
+        "outputId": "8b76e92f-cfd9-4da2-d5e1-a7f3cc73bc26"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "  0%|          | 1/1000 [00:43<12:00:16, 43.26s/it]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Training Batch 0: Collected 1000 timesteps, 2 episodes\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\r  0%|          | 2/1000 [01:26<11:58:25, 43.19s/it]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Training Batch 1: Collected 1000 timesteps, 2 episodes\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\r  0%|          | 3/1000 [02:10<12:03:19, 43.53s/it]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Training Batch 2: Collected 1000 timesteps, 2 episodes\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\r  0%|          | 4/1000 [02:52<11:54:48, 43.06s/it]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Training Batch 3: Collected 1000 timesteps, 2 episodes\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\r  0%|          | 5/1000 [03:34<11:44:40, 42.49s/it]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Training Batch 4: Collected 1000 timesteps, 2 episodes\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\r  1%|          | 6/1000 [04:17<11:48:26, 42.76s/it]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Training Batch 5: Collected 1000 timesteps, 2 episodes\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\r  1%|          | 7/1000 [04:59<11:44:37, 42.58s/it]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Training Batch 6: Collected 1000 timesteps, 2 episodes\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\r  1%|          | 8/1000 [05:41<11:39:40, 42.32s/it]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Training Batch 7: Collected 1000 timesteps, 2 episodes\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\r  1%|          | 9/1000 [06:23<11:35:15, 42.09s/it]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Training Batch 8: Collected 1000 timesteps, 2 episodes\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\r  1%|          | 10/1000 [07:05<11:38:41, 42.34s/it]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Training Batch 9: Collected 1000 timesteps, 2 episodes\n",
-            "Training Batch 10: Collected 1000 timesteps, 2 episodes\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\r  1%|          | 11/1000 [08:36<15:40:25, 57.05s/it]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Episode 10: Avg Test Reward = 143.01, Max Test Reward = 171.83\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\r  1%|          | 12/1000 [09:18<14:22:53, 52.40s/it]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Training Batch 11: Collected 1000 timesteps, 2 episodes\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\r  1%|▏         | 13/1000 [09:59<13:29:04, 49.18s/it]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Training Batch 12: Collected 1000 timesteps, 2 episodes\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\r  1%|▏         | 13/1000 [10:42<13:32:37, 49.40s/it]\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-63-3255731527.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    204\u001b[0m             \u001b[0;31m# Optimize\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    205\u001b[0m             \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzero_grad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 206\u001b[0;31m             \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    207\u001b[0m             \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclip_grad_norm_\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    208\u001b[0m             \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/torch/_tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[1;32m    624\u001b[0m                 \u001b[0minputs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    625\u001b[0m             )\n\u001b[0;32m--> 626\u001b[0;31m         torch.autograd.backward(\n\u001b[0m\u001b[1;32m    627\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    628\u001b[0m         )\n",
-            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/torch/autograd/__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[1;32m    345\u001b[0m     \u001b[0;31m# some Python versions print out the first line of a multi-line function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    346\u001b[0m     \u001b[0;31m# calls in the traceback and some print out the last line\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 347\u001b[0;31m     _engine_run_backward(\n\u001b[0m\u001b[1;32m    348\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    349\u001b[0m         \u001b[0mgrad_tensors_\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/torch/autograd/graph.py\u001b[0m in \u001b[0;36m_engine_run_backward\u001b[0;34m(t_outputs, *args, **kwargs)\u001b[0m\n\u001b[1;32m    821\u001b[0m         \u001b[0munregister_hooks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_register_logging_hooks_on_whole_graph\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt_outputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    822\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 823\u001b[0;31m         return Variable._execution_engine.run_backward(  # Calls into the C++ engine to run the backward pass\n\u001b[0m\u001b[1;32m    824\u001b[0m             \u001b[0mt_outputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    825\u001b[0m         )  # Calls into the C++ engine to run the backward pass\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+            "\r  0%|          | 0/1000 [00:00<?, ?it/s]"
           ]
         }
       ]
