--- a/V3.ipynb
+++ b/V3.ipynb
@@ -21,14 +21,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "collapsed": true,
         "id": "AAc_-AeGEE5H",
-        "outputId": "6f60eb0c-07b7-4548-c29c-6047ee46567f"
+        "outputId": "face0972-4a41-4f07-f853-5ca80ba3d47d"
       },
       "outputs": [
         {
@@ -36,7 +36,8 @@
           "name": "stdout",
           "text": [
             "Requirement already satisfied: pygame in /usr/local/lib/python3.11/dist-packages (2.6.1)\n",
-            "Requirement already satisfied: highway-env in /usr/local/lib/python3.11/dist-packages (1.10.1)\n",
+            "Collecting highway-env\n",
+            "  Downloading highway_env-1.10.1-py3-none-any.whl.metadata (16 kB)\n",
             "Requirement already satisfied: gymnasium>=1.0.0a2 in /usr/local/lib/python3.11/dist-packages (from highway-env) (1.1.1)\n",
             "Requirement already satisfied: farama-notifications>=0.0.1 in /usr/local/lib/python3.11/dist-packages (from highway-env) (0.0.4)\n",
             "Requirement already satisfied: numpy>=1.21.0 in /usr/local/lib/python3.11/dist-packages (from highway-env) (2.0.2)\n",
@@ -56,7 +57,11 @@
             "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.11/dist-packages (from matplotlib->highway-env) (2.9.0.post0)\n",
             "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.11/dist-packages (from pandas->highway-env) (2025.2)\n",
             "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.11/dist-packages (from pandas->highway-env) (2025.2)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.7->matplotlib->highway-env) (1.17.0)\n"
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.7->matplotlib->highway-env) (1.17.0)\n",
+            "Downloading highway_env-1.10.1-py3-none-any.whl (104 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m105.0/105.0 kB\u001b[0m \u001b[31m9.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: highway-env\n",
+            "Successfully installed highway-env-1.10.1\n"
           ]
         }
       ],
@@ -76,7 +81,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 2,
       "metadata": {
         "id": "-ZwGd9eVEWGY"
       },
@@ -122,24 +127,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "y922XK-cIewr",
-        "outputId": "9cd3176a-961a-42a8-b8c8-177075362e40"
+        "outputId": "bf78835b-5853-434e-9999-18412250dac1"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<highway_env.envs.common.action.ContinuousAction at 0x7bb2624b4290>"
+              "<highway_env.envs.common.action.ContinuousAction at 0x7917b6c65690>"
             ]
           },
           "metadata": {},
-          "execution_count": 47
+          "execution_count": 3
         }
       ],
       "source": [
@@ -173,7 +178,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 4,
       "metadata": {
         "id": "2HbWr4urTXQ8"
       },
@@ -398,7 +403,7 @@
       "metadata": {
         "id": "MW5pZ2IxtbyI"
       },
-      "execution_count": 61,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -412,7 +417,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 6,
       "metadata": {
         "id": "ydU55ZY5eX4U"
       },
@@ -531,7 +536,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 7,
       "metadata": {
         "id": "gPl1lptqKdAy"
       },
@@ -571,7 +576,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 8,
       "metadata": {
         "id": "RYA-H09sIw2_"
       },
@@ -814,7 +819,8 @@
         "            b_adv, obs_batch, action_batch, old_log_probs, old_state_values = batch_data\n",
         "\n",
         "            # Forward pass\n",
-        "            _, log_probs, value = model.action(obs_batch)\n",
+        "            dist, value = model(obs_batch)\n",
+        "            log_probs = dist.log_prob(action_batch)\n",
         "\n",
         "            # Calculate ratio\n",
         "            ratio = torch.exp(log_probs - old_log_probs)\n",
@@ -825,7 +831,7 @@
         "            policy_loss_2 = b_adv * torch.clamp(ratio, 1-epsilon, 1+epsilon)\n",
         "            policy_loss = -torch.min(policy_loss_1, policy_loss_2).mean()\n",
         "\n",
-        "            actor_loss = policy_loss - ent_coef_c2 * m.entropy().mean()\n",
+        "            actor_loss = policy_loss - ent_coef_c2 * dist.entropy().mean()\n",
         "            critic_loss = F.mse_loss(returns, value.squeeze())\n",
         "\n",
         "            # Optimize\n",
@@ -838,7 +844,6 @@
         "            critic_optimizer.zero_grad() # Clear gradients for critic\n",
         "            critic_loss.backward()       # Compute gradients for critic_loss w.r.t. critic_params\n",
         "            critic_optimizer.step()\n",
-        "\n",
         "\n",
         "    # Print rollout info\n",
         "    print(f\"Training Batch {episode}: Collected {actual_T} timesteps, {episodes_completed_in_rollout} episodes\")\n",
@@ -902,18 +907,30 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 228
         },
         "id": "gMY396Rx5F1J",
-        "outputId": "8b76e92f-cfd9-4da2-d5e1-a7f3cc73bc26"
+        "outputId": "9a8883ee-a2ab-4775-dc83-0fa4bf105b11"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "\r  0%|          | 0/1000 [00:00<?, ?it/s]"
+            "  0%|          | 0/1000 [00:37<?, ?it/s]\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'm' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-9-3837577455.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    195\u001b[0m             \u001b[0mpolicy_loss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpolicy_loss_1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpolicy_loss_2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    196\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 197\u001b[0;31m             \u001b[0mactor_loss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpolicy_loss\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0ment_coef_c2\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mentropy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    198\u001b[0m             \u001b[0mcritic_loss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mF\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmse_loss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreturns\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    199\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'm' is not defined"
           ]
         }
       ]
