--- a/V3.ipynb
+++ b/V3.ipynb
@@ -658,7 +658,7 @@
         "critic_params = list(model.critic.parameters())\n",
         "\n",
         "actor_optimizer = torch.optim.Adam(actor_params, lr=3e-4)\n",
-        "critic_optimizer = torch.optim.Adam(critic_params, lr=1e-4)\n",
+        "critic_optimizer = torch.optim.Adam(critic_params, lr=1e-3)\n",
         "\n",
         "# Tracking variables\n",
         "total_env_episodes = 0\n",
@@ -910,15 +910,508 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gMY396Rx5F1J",
-        "outputId": "635fd282-9df9-430d-f4f5-474fc30baaf7"
+        "outputId": "588266d3-3b28-4efe-ff50-049786f93660"
       },
       "execution_count": null,
       "outputs": [
         {
+          "metadata": {
+            "tags": null
+          },
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "  0%|          | 1/1000 [00:07<2:10:28,  7.84s/it]"
+          ]
+        },
+        {
+          "metadata": {
+            "tags": null
+          },
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Training Batch 0: Collected 200 timesteps, 0 episodes\n"
+          ]
+        },
+        {
+          "metadata": {
+            "tags": null
+          },
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\r  0%|          | 2/1000 [00:14<2:00:07,  7.22s/it]"
+          ]
+        },
+        {
+          "metadata": {
+            "tags": null
+          },
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Training Batch 1: Collected 200 timesteps, 0 episodes\n"
+          ]
+        },
+        {
+          "metadata": {
+            "tags": null
+          },
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\r  0%|          | 3/1000 [00:22<2:05:03,  7.53s/it]"
+          ]
+        },
+        {
+          "metadata": {
+            "tags": null
+          },
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Training Batch 2: Collected 200 timesteps, 0 episodes\n"
+          ]
+        },
+        {
+          "metadata": {
+            "tags": null
+          },
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\r  0%|          | 4/1000 [00:30<2:08:02,  7.71s/it]"
+          ]
+        },
+        {
+          "metadata": {
+            "tags": null
+          },
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Training Batch 3: Collected 200 timesteps, 0 episodes\n"
+          ]
+        },
+        {
+          "metadata": {
+            "tags": null
+          },
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\r  0%|          | 5/1000 [00:37<2:03:12,  7.43s/it]"
+          ]
+        },
+        {
+          "metadata": {
+            "tags": null
+          },
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Training Batch 4: Collected 200 timesteps, 0 episodes\n"
+          ]
+        },
+        {
+          "metadata": {
+            "tags": null
+          },
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\r  1%|          | 6/1000 [00:45<2:05:24,  7.57s/it]"
+          ]
+        },
+        {
+          "metadata": {
+            "tags": null
+          },
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Training Batch 5: Collected 200 timesteps, 0 episodes\n"
+          ]
+        },
+        {
+          "metadata": {
+            "tags": null
+          },
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\r  1%|          | 7/1000 [00:52<2:02:25,  7.40s/it]"
+          ]
+        },
+        {
+          "metadata": {
+            "tags": null
+          },
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Training Batch 6: Collected 200 timesteps, 0 episodes\n"
+          ]
+        },
+        {
+          "metadata": {
+            "tags": null
+          },
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\r  1%|          | 8/1000 [01:00<2:03:46,  7.49s/it]"
+          ]
+        },
+        {
+          "metadata": {
+            "tags": null
+          },
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Training Batch 7: Collected 200 timesteps, 0 episodes\n"
+          ]
+        },
+        {
+          "metadata": {
+            "tags": null
+          },
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\r  1%|          | 9/1000 [01:08<2:06:28,  7.66s/it]"
+          ]
+        },
+        {
+          "metadata": {
+            "tags": null
+          },
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Training Batch 8: Collected 200 timesteps, 0 episodes\n"
+          ]
+        },
+        {
+          "metadata": {
+            "tags": null
+          },
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\r  1%|          | 10/1000 [01:14<2:02:24,  7.42s/it]"
+          ]
+        },
+        {
+          "metadata": {
+            "tags": null
+          },
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Training Batch 9: Collected 200 timesteps, 0 episodes\n",
+            "Training Batch 10: Collected 200 timesteps, 0 episodes\n"
+          ]
+        },
+        {
+          "metadata": {
+            "tags": null
+          },
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\r  1%|          | 11/1000 [02:03<5:27:45, 19.88s/it]"
+          ]
+        },
+        {
+          "metadata": {
+            "tags": null
+          },
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Episode 10: Avg Test Reward = 143.41, Max Test Reward = 165.87\n"
+          ]
+        },
+        {
+          "metadata": {
+            "tags": null
+          },
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\r  1%|          | 12/1000 [02:10<4:26:02, 16.16s/it]"
+          ]
+        },
+        {
+          "metadata": {
+            "tags": null
+          },
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Training Batch 11: Collected 200 timesteps, 0 episodes\n"
+          ]
+        },
+        {
+          "metadata": {
+            "tags": null
+          },
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\r  1%|▏         | 13/1000 [02:17<3:37:48, 13.24s/it]"
+          ]
+        },
+        {
+          "metadata": {
+            "tags": null
+          },
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Training Batch 12: Collected 200 timesteps, 0 episodes\n"
+          ]
+        },
+        {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "\r  0%|          | 0/1000 [00:00<?, ?it/s]"
+            "\r  1%|▏         | 14/1000 [02:24<3:09:22, 11.52s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training Batch 13: Collected 200 timesteps, 0 episodes\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r  2%|▏         | 15/1000 [02:32<2:48:25, 10.26s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training Batch 14: Collected 200 timesteps, 0 episodes\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r  2%|▏         | 16/1000 [02:38<2:31:30,  9.24s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training Batch 15: Collected 200 timesteps, 0 episodes\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r  2%|▏         | 17/1000 [02:46<2:22:59,  8.73s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training Batch 16: Collected 200 timesteps, 0 episodes\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r  2%|▏         | 18/1000 [02:53<2:12:58,  8.12s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training Batch 17: Collected 200 timesteps, 0 episodes\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r  2%|▏         | 19/1000 [03:00<2:10:05,  7.96s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training Batch 18: Collected 200 timesteps, 0 episodes\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r  2%|▏         | 20/1000 [03:07<2:04:36,  7.63s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training Batch 19: Collected 200 timesteps, 0 episodes\n",
+            "Training Batch 20: Collected 200 timesteps, 0 episodes\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r  2%|▏         | 21/1000 [03:55<5:21:32, 19.71s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Episode 20: Avg Test Reward = 76.08, Max Test Reward = 76.68\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r  2%|▏         | 22/1000 [04:03<4:23:29, 16.17s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training Batch 21: Collected 200 timesteps, 0 episodes\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r  2%|▏         | 23/1000 [04:11<3:43:54, 13.75s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training Batch 22: Collected 200 timesteps, 0 episodes\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r  2%|▏         | 24/1000 [04:18<3:09:49, 11.67s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training Batch 23: Collected 200 timesteps, 0 episodes\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r  2%|▎         | 25/1000 [04:26<2:49:53, 10.45s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training Batch 24: Collected 200 timesteps, 0 episodes\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r  3%|▎         | 26/1000 [04:33<2:35:28,  9.58s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training Batch 25: Collected 200 timesteps, 0 episodes\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r  3%|▎         | 27/1000 [04:40<2:23:27,  8.85s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training Batch 26: Collected 200 timesteps, 0 episodes\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r  3%|▎         | 28/1000 [04:48<2:17:54,  8.51s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training Batch 27: Collected 200 timesteps, 0 episodes\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r  3%|▎         | 29/1000 [04:55<2:09:43,  8.02s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training Batch 28: Collected 200 timesteps, 0 episodes\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r  3%|▎         | 30/1000 [05:02<2:07:58,  7.92s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training Batch 29: Collected 200 timesteps, 0 episodes\n"
           ]
         }
       ]
