--- a/V3.ipynb
+++ b/V3.ipynb
@@ -21,14 +21,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "collapsed": true,
         "id": "AAc_-AeGEE5H",
-        "outputId": "face0972-4a41-4f07-f853-5ca80ba3d47d"
+        "outputId": "18ef4d90-c311-42f3-996a-4215a6125a7b"
       },
       "outputs": [
         {
@@ -59,7 +59,7 @@
             "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.11/dist-packages (from pandas->highway-env) (2025.2)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.7->matplotlib->highway-env) (1.17.0)\n",
             "Downloading highway_env-1.10.1-py3-none-any.whl (104 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m105.0/105.0 kB\u001b[0m \u001b[31m9.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m105.0/105.0 kB\u001b[0m \u001b[31m8.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: highway-env\n",
             "Successfully installed highway-env-1.10.1\n"
           ]
@@ -81,7 +81,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "id": "-ZwGd9eVEWGY"
       },
@@ -127,24 +127,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "y922XK-cIewr",
-        "outputId": "bf78835b-5853-434e-9999-18412250dac1"
+        "outputId": "e4008c13-ee00-4c99-f15c-64d68c1ceb68"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<highway_env.envs.common.action.ContinuousAction at 0x7917b6c65690>"
+              "<highway_env.envs.common.action.ContinuousAction at 0x7c161260c150>"
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 4
         }
       ],
       "source": [
@@ -178,7 +178,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {
         "id": "2HbWr4urTXQ8"
       },
@@ -403,7 +403,7 @@
       "metadata": {
         "id": "MW5pZ2IxtbyI"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -417,7 +417,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 7,
       "metadata": {
         "id": "ydU55ZY5eX4U"
       },
@@ -536,7 +536,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 8,
       "metadata": {
         "id": "gPl1lptqKdAy"
       },
@@ -576,11 +576,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 9,
       "metadata": {
-        "id": "RYA-H09sIw2_"
+        "id": "RYA-H09sIw2_",
+        "outputId": "3a477a53-6b83-4939-dc25-88b9776b9396",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "State Dimension: 8, Action Dimension: 1\n"
+          ]
+        }
+      ],
       "source": [
         "################################################################################\n",
         "\"\"\"Initialization\"\"\"\n",
@@ -619,7 +631,35 @@
         "# Environment Information\n",
         "L = env.unwrapped.vehicle.LENGTH\n",
         "agent_state = state_manager.ego_state_agent(target_id=target_id)\n",
-        "state_dim = len(agent_state)"
+        "state_dim = len(agent_state)\n",
+        "action_dim = 1\n",
+        "print(f\"State Dimension: {state_dim}, Action Dimension: {action_dim}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "(env.unwrapped.vehicle.on_road)"
+      ],
+      "metadata": {
+        "id": "gHIrzE6I42nB",
+        "outputId": "b7c197fa-35c9-4a20-beb1-abaa4766d880",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "np.True_"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
       ]
     },
     {
@@ -635,7 +675,7 @@
       "cell_type": "code",
       "source": [
         "# Define hyperparameters\n",
-        "T = 200  # Max timesteps per rollout\n",
+        "T = 500  # Max timesteps per rollout\n",
         "K = 10    # Number of policy update epochs\n",
         "\n",
         "batch_size = 64\n",
@@ -650,7 +690,6 @@
         "\n",
         "# Define action dimension (continuous action space)\n",
         "action_dim = 1  # For lateral acceleration\n",
-        "state_dim = 8   # Based on your agent state\n",
         "\n",
         "# Initialize model and optimizer\n",
         "model = ActorCritic(state_dim=state_dim, action_dim=action_dim).to(device)\n",
@@ -698,7 +737,7 @@
         "    obs_old = obs\n",
         "\n",
         "    # Collect trajectories with dual stopping condition\n",
-        "    while t < T and episodes_completed_in_rollout < max_episodes_per_rollout:\n",
+        "    while not done and episodes_completed_in_rollout < max_episodes_per_rollout:\n",
         "\n",
         "        gap_control = Gap_Controller(obs, following_gap_threshold=30)\n",
         "        activated_target_lane = gap_control.lane_checker()\n",
@@ -721,6 +760,10 @@
         "        # Take action in environment\n",
         "        obs, reward, done, truncated, info = env.step(action)\n",
         "        done = done or truncated\n",
+        "\n",
+        "        # Terminal conditions\n",
+        "        if t == T-1 or info['collision'] or not env.unwrapped.vehicle.on_road:\n",
+        "            done = True\n",
         "\n",
         "        # Update state manager with new observation and applied longitudinal control\n",
         "        state_manager.update(obs)\n",
